force-app/main/default/objects/ND_Young_Alumni_Designation_Chart__c/ND_Young_Alumni_Designation_Chart__c.object-meta.xml
<CustomObject>
    <label>Young Alumni Designation Chart</label>
    <nameField>
        <label>Young Alumni Designation Chart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Young Alumni Designation Chart</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>