force-app/main/default/objects/ND_Young_Alumni_Designation_Chart__c/fields/Max_years_since_graduation__c.field-meta.xml
<CustomField>
    <fullName>Max_years_since_graduation__c</fullName>
    <label>Max years since graduation</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>