force-app/main/default/objects/ND_Young_Alumni_Designation_Chart__c/fields/Rec_Soc_Designation__c.field-meta.xml
<CustomField>
    <fullName>Rec_Soc_Designation__c</fullName>
    <label>Rec Soc Designation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>