force-app/main/default/objects/ND_Young_Alumni_Designation_Chart__c/fields/Unrestricted_Designation__c.field-meta.xml
<CustomField>
    <fullName>Unrestricted_Designation__c</fullName>
    <label>Unrestricted Designation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>