force-app/main/default/objects/ND_Young_Alumni_Designation_Chart__c/fields/Unrestricted_threshold__c.field-meta.xml
<CustomField>
    <fullName>Unrestricted_threshold__c</fullName>
    <label>Unrestricted threshold</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>