force-app/main/default/objects/ND_Young_Alumni_Designation_Chart__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Unrestricted_Designation__c</columns>
    <columns>Min_years_since_graduation__c</columns>
    <columns>Max_years_since_graduation__c</columns>
    <columns>Unrestricted_threshold__c</columns>
    <columns>Rec_Soc_Designation__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>